app/website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - image: onlylight291998/crawler-website
        name: website
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website-svc
spec:
  ports:
    - port: 3100
      targetPort: 80
  selector:
    app: website
